--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_octicons: ^0.42.0
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +20,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/isfahan.jpg
+    - assets/avatar.jpg
+  fonts:
+    - family: MonaSans
+      fonts:
+        - asset: fonts/MonaSans-Regular.ttf
