--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,11 +10,17 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: flutter pub get && flutter build web
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLUTTER_EXPLAINED_TUTORIALS }}'
-          channelId: live
-          projectId: flutter-explained-tutorials
+        - uses: actions/checkout@v3
+        - uses: subosito/flutter-action@v2
+          with:
+            flutter-version: '3.7.7'
+            channel: 'stable'
+        - run: flutter --version
+        - run: flutter pub get
+        - run: flutter build web
+        - uses: FirebaseExtended/action-hosting-deploy@v0
+          with:
+            repoToken: '${{ secrets.GITHUB_TOKEN }}'
+            firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLUTTER_EXPLAINED_TUTORIALS }}'
+            channelId: live
+            projectId: flutter-explained-tutorials
