--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
+  feather_icons: ^1.2.0
   flutter:
     sdk: flutter
   flutter_octicons: ^0.42.0
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
